--- a/index.html
+++ b/index.html
@@ -1,40 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Vidarbha Exports | Global EXIM Trade</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Vidarbha Exports | Global Import Export</title>
 
-<!-- Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
-:root{
-  --gold:#d4af37;
-  --dark:#0b0f1a;
-  --light:#ffffff;
-  --blue:#1f3cff;
-}
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
-body{background:var(--dark);color:var(--light);line-height:1.6}
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif}
+body{background:#0b0f19;color:#fff}
 
 /* NAVBAR */
 nav{
-  position:fixed;top:0;width:100%;
-  background:rgba(11,15,26,.9);
-  display:flex;justify-content:space-between;align-items:center;
-  padding:15px 8%;z-index:1000;
-  backdrop-filter: blur(10px);
-}
-nav h1{color:var(--gold);font-size:22px;font-weight:700}
-nav a{
-  color:#ddd;text-decoration:none;margin-left:25px;
-  transition:.3s
-}
-nav a:hover{color:var(--gold)}
+display:flex;justify-content:space-between;align-items:center;
+padding:20px 60px;position:fixed;width:100%;
+background:rgba(0,0,0,0.6);backdrop-filter:blur(10px);z-index:10}
+nav h1{font-weight:700;color:#00e5ff}
+nav ul{display:flex;gap:30px;list-style:none}
+nav a{text-decoration:none;color:#fff;font-weight:500}
 
 /* HERO */
 .hero{
+height:100vh;display:flex;align-items:center;justify-content:center;
+background:linear-gradient(120deg,#020617,#020617),url('https://images.unsplash.com/photo-1581092334651-ddf26d9b1f68') center/cover;
+}
+.hero-content{text-align:center;max-width:800px}
+.hero h2{font-size:3rem;margin-bottom:20px}
+.hero p{opacity:0.85;margin-bottom:30px}
+.hero button{
+padding:15px 40px;border:none;border-radius:30px;
+background:#00e5ff;color:#000;font-size:1rem;font-weight:600;cursor:pointer}
+
+/* SECTIONS */
+section{padding:100px 60px}
+.section-title{text-align:center;font-size:2.2rem;margin-bottom:50px;color:#00e5ff}
+
+.grid{
+display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+gap:30px}
+
+/* CARDS */
+.card{
+background:#12182b;padding:30px;border-radius:20px;
+transition:0.3s}
+.card:hover{transform:translateY(-10px);box-shadow:0 20px 40px rgba(0,229,255,0.2)}
+.card h3{margin-bottom:15px;color:#00e5ff}
+
+/* CTA */
+.cta{
+background:linear-gradient(120deg,#00e5ff,#0077ff);
+color:#000;text-align:center;padding:80px 40px;border-radius:30px}
+.cta h2{margin-bottom:20px}
+.cta button{
+padding:15px 40px;border:none;border-radius:30px;
+background:#000;color:#fff;font-size:1rem}
+
+/* FOOTER */
+footer{text-align:center;padding:40px;opacity:0.6}
+</style>
+</head>
+
+<body>
+
+<nav>
+<h1>Vidarbha Exports</h1>
+<ul>
+<li><a href="#about">About</a></li>
+<li><a href="#markets">Markets</a></li>
+<li><a href="#products">Products</a></li>
+<li><a href="#contact">Contact</a></li>
+</ul>
+</nav>
+
+<!-- HERO -->
+<div class="hero">
+<div class="hero-content">
+<h2>Global Import & Export Solutions</h2>
+<p>Connecting Indian agriculture and chemical products with trusted international buyers.</p>
+<button onclick="scrollToContact()">Get In Touch</button>
+</div>
+</div>
+
+<!-- ABOUT -->
+<section id="about">
+<h2 class="section-title">Who We Are</h2>
+<div class="grid">
+<div class="card">
+<h3>Trusted Exporter</h3>
+<p>Vidarbha Exports delivers quality‑assured products globally with transparency.</p>
+</div>
+<div class="card">
+<h3>Global Network</h3>
+<p>Strong presence in India, USA, UAE, China, Vietnam & Sri Lanka.</p>
+</div>
+<div class="card">
+<h3>Growth Driven</h3>
+<p>Focused on long‑term partnerships and scalable global trade.</p>
+</div>
+</div>
+</section>
+
+<!-- MARKETS -->
+<section id="markets">
+<h2 class="section-title">Our Markets</h2>
+<div class="grid">
+<div class="card">🇮🇳 India</div>
+<div class="card">🇺🇸 USA</div>
+<div class="card">🇦🇪 UAE</div>
+<div class="card">🇨🇳 China</div>
+<div class="card">🇻🇳 Vietnam</div>
+<div class="card">🇱🇰 Sri Lanka</div>
+</div>
+</section>
+
+<!-- PRODUCTS -->
+<section id="products">
+<h2 class="section-title">Product Categories</h2>
+<div class="grid">
+<div class="card">
+<h3>Agriculture Products</h3>
+<p>High‑quality farm produce sourced directly from trusted suppliers.</p>
+</div>
+<div class="card">
+<h3>Chemical Products</h3>
+<p>Export‑grade chemicals meeting international compliance standards.</p>
+</div>
+</div>
+</section>
+
+<!-- CTA -->
+<section id="contact">
+<div class="cta">
+<h2>Let’s Build Global Trade Together</h2>
+<p>Email: bhoyaraakash074@gmail.com</p>
+<p>Phone: Available on Request</p>
+<button onclick="alert('Thank you! We will contact you shortly.')">Contact Us</button>
+</div>
+</section>
+
+<footer>
+© 2026 Vidarbha Exports. All Rights Reserved.
+</footer>
+
+<script>
+function scrollToContact(){
+document.getElementById("contact").scrollIntoView({behavior:"smooth"});
+}
+</script>
+
+</body>
+</html>.hero{
   min-height:100vh;
   background:
   linear-gradient(to right,rgba(0,0,0,.7),rgba(0,0,0,.2)),
